updating UI, codes and imports optimization, also preparing for dark mode feature

--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -20,5 +20,5 @@
     <string name="widget_enabled">Github Widget diaktifkan</string>
     <string name="widget_disabled">Github Widget dimatikan</string>
     <string name="location_not_found">Lokasi Tidak Ditemukan :(</string>
-    <string name="created_by">Dibuat Oleh:</string>
+    <string name="created_by">Dibuat Oleh: Kylix Eza</string>
 </resources>
