5. Splash Screen, Icon App, Fix Style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Demo Submission BFAA</string>
+    <string name="app_name">Github App</string>
     <string name="username">Username</string>
     <string name="name">Name</string>
     <string name="location">Location</string>
